Fix file upload dialog not appearing on Windows Phone Change upload button to 0% to provide feedback as I'm guessing image resizing can take a few seconds before upload starts Vertically center text in add photo button in IE with align-items center

--- a/app/styles/_custom.scss
+++ b/app/styles/_custom.scss
@@ -434,6 +434,9 @@ textarea {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+
+  /* needed by IE11 although there's a fix planned */
+  align-items: center;
 }
 
 .center-item {
